# rename-tool

./: pyproject.toml  requirements.txt
rename_tool/: __main__.py  cli.py  types.py
rename_tool/core/: __init__.py  consts.py  core0.py  core1.py
rn/: __main__.py  cli.py  jobs.py  pp.py  types.py
rn/job/: __init__.py  _job_1.py  job_0.py  job_1.py
rn/pp/: __init__.py  _pp_0.py  _pp_1.py  pp_1.py
